WIP: ceph-ansible integration
Will it blend?

Change-Id: I275708096a71f66d73be1400c8a592c598382c1d

--- a/playbooks/setup-infrastructure.yml
+++ b/playbooks/setup-infrastructure.yml
@@ -20,5 +20,6 @@
 - include: galera-install.yml
 - include: rabbitmq-install.yml
 - include: etcd-install.yml
+- include: ceph-install.yml
 - include: utility-install.yml
 - include: rsyslog-install.yml
